Fixing some SonarQube warnings